--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "ISC",
     "dependencies": {
         "axios": "^0.18.0",
+        "bulma": "^0.7.1",
         "moment": "^2.22.2",
         "react": "^16.5.0",
         "react-dom": "^16.5.0"
